Blender Crash #44329

Closed
opened 2015-04-09 21:59:20 +02:00 by Aaron Carlisle · 17 comments
Member

System Information
Windows 8.0
Intel HD 4600

Blender Version
Broken: 2.74.4
Worked: At least 2.74 I think

Short description of error
Blender Crashes when going into render shading

Exact steps for others to reproduce the error
Inter render shading mode

Logs And Files

Crash.txt

# Blender 2.74 (sub 4), Commit date: 2015-04-09 03:00, Hash 12661de
bpy.context.space_data.viewport_shade = 'WIREFRAME'  # Property
bpy.context.space_data.viewport_shade = 'RENDERED'  # Property

# backtrace
21:  - 0x0
20:  - 0x0
19:  - 0x0
18:  - 0x0
17:  - 0x0
16:  - 0x0
15:  - 0x0
14:  - 0x0
13:  - 0x0
12:  - 0x0
11:  - 0x0
10:  - 0x0
9:  - 0x0
8:  - 0x0
7:  - 0x0
6:  - 0x0
5:  - 0x0
4:  - 0x0
3:  - 0x0
2:  - 0x0
1:  - 0x0
0:  - 0x0

CMD

Microsoft Windows [Version 6.2.9200]
(c) 2012 Microsoft Corporation. All rights reserved.

C:\Users\Aaron>cd C:\Users\Aaron\Downloads\blender-2.74-12661de-win64\blender-2.74-12661de-win64

C:\Users\Aaron\Downloads\blender-2.74-12661de-win64\blender-2.74-12661de-win64>blender.exe -d
Switching to fully guarded memory allocator.
Blender 2.74 (sub 4)
Build: 2015-04-09 06:57:01 Windows:64bit Release
argv[0] = blender-app.exe
argv[1] = -d
read file C:\Users\Aaron\AppData\Roaming\Blender Foundation\Blender\2.74\config\startup.blend
  Version 274 sub 4 date 1970-01-01 00:00 hash unknown

ordered
 OBCube
 OBLamp
 OBCamera
read file C:\Users\Aaron\AppData\Roaming\Blender Foundation\Blender\2.74\config\userpref.blend
  Version 274 sub 2 date 1970-01-01 00:00 hash unknown
Read new prefs: C:\Users\Aaron\AppData\Roaming\Blender Foundation\Blender\2.74\config\userpref.blend
found bundled python: C:\Users\Aaron\Downloads\blender-2.74-12661de-win64\blender-2.74-12661de-win64\2.74\python
Loaded Animation Nodes with 149 modules
read file
  Version 262 sub 3 date 1970-01-01 00:00 hash
read file
  Version 268 sub 5 date 1970-01-01 00:00 hash
read blend: C:\Users\Aaron\Downloads\Bokeh.blend
read file C:\Users\Aaron\Downloads\Bokeh.blend
  Version 274 sub 2 date 1970-01-01 00:00 hash unknown

ordered
 OBField.002
 OBField.001
 OBField
 OBPlane
 OBCircle
 OBLamp
 OBCamera
write exr tmp file, 55x50, C:\Users\Aaron\AppData\Local\Temp\blender_a03104\Bokeh_blend_Scene_RenderLayer_exr
Error: EXCEPTION_ACCESS_VIOLATION
Writing: C:\Users\Aaron\AppData\Local\Temp\Bokeh.crash.txt
Error: EXCEPTION_ACCESS_VIOLATION
Writing: C:\Users\Aaron\AppData\Local\Temp\Bokeh.crash.txt
Unable to delete file

C:\Users\Aaron\Downloads\blender-2.74-12661de-win64\blender-2.74-12661de-win64>

Blend File

Bokeh.blend

**System Information** Windows 8.0 Intel HD 4600 **Blender Version** Broken: 2.74.4 Worked: At least 2.74 I think **Short description of error** Blender Crashes when going into render shading **Exact steps for others to reproduce the error** Inter render shading mode **Logs And Files** *Crash.txt* ``` # Blender 2.74 (sub 4), Commit date: 2015-04-09 03:00, Hash 12661de bpy.context.space_data.viewport_shade = 'WIREFRAME' # Property bpy.context.space_data.viewport_shade = 'RENDERED' # Property # backtrace 21: - 0x0 20: - 0x0 19: - 0x0 18: - 0x0 17: - 0x0 16: - 0x0 15: - 0x0 14: - 0x0 13: - 0x0 12: - 0x0 11: - 0x0 10: - 0x0 9: - 0x0 8: - 0x0 7: - 0x0 6: - 0x0 5: - 0x0 4: - 0x0 3: - 0x0 2: - 0x0 1: - 0x0 0: - 0x0 ``` *CMD* ``` Microsoft Windows [Version 6.2.9200] (c) 2012 Microsoft Corporation. All rights reserved. C:\Users\Aaron>cd C:\Users\Aaron\Downloads\blender-2.74-12661de-win64\blender-2.74-12661de-win64 C:\Users\Aaron\Downloads\blender-2.74-12661de-win64\blender-2.74-12661de-win64>blender.exe -d Switching to fully guarded memory allocator. Blender 2.74 (sub 4) Build: 2015-04-09 06:57:01 Windows:64bit Release argv[0] = blender-app.exe argv[1] = -d read file C:\Users\Aaron\AppData\Roaming\Blender Foundation\Blender\2.74\config\startup.blend Version 274 sub 4 date 1970-01-01 00:00 hash unknown ordered OBCube OBLamp OBCamera read file C:\Users\Aaron\AppData\Roaming\Blender Foundation\Blender\2.74\config\userpref.blend Version 274 sub 2 date 1970-01-01 00:00 hash unknown Read new prefs: C:\Users\Aaron\AppData\Roaming\Blender Foundation\Blender\2.74\config\userpref.blend found bundled python: C:\Users\Aaron\Downloads\blender-2.74-12661de-win64\blender-2.74-12661de-win64\2.74\python Loaded Animation Nodes with 149 modules read file Version 262 sub 3 date 1970-01-01 00:00 hash read file Version 268 sub 5 date 1970-01-01 00:00 hash read blend: C:\Users\Aaron\Downloads\Bokeh.blend read file C:\Users\Aaron\Downloads\Bokeh.blend Version 274 sub 2 date 1970-01-01 00:00 hash unknown ordered OBField.002 OBField.001 OBField OBPlane OBCircle OBLamp OBCamera write exr tmp file, 55x50, C:\Users\Aaron\AppData\Local\Temp\blender_a03104\Bokeh_blend_Scene_RenderLayer_exr Error: EXCEPTION_ACCESS_VIOLATION Writing: C:\Users\Aaron\AppData\Local\Temp\Bokeh.crash.txt Error: EXCEPTION_ACCESS_VIOLATION Writing: C:\Users\Aaron\AppData\Local\Temp\Bokeh.crash.txt Unable to delete file C:\Users\Aaron\Downloads\blender-2.74-12661de-win64\blender-2.74-12661de-win64> ``` *Blend File* [Bokeh.blend](https://archive.blender.org/developer/F160239/Bokeh.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Confirmed, no time to check now on latest master, but I can see this on buildbot.

Confirmed, no time to check now on latest master, but I can see this on buildbot.
Author
Member

The back-trace is quite weird

The back-trace is quite weird

And useless in release builds as I;ve explained many times. I'll disable it shortly.

And useless in release builds as I;ve explained many times. I'll disable it shortly.
Author
Member

Also this might be oprtator error but I can't get it to render out completely it goes to a surtain point a keeps rendering that frame

Also this might be oprtator error but I can't get it to render out completely it goes to a surtain point a keeps rendering that frame

This issue was referenced by 1e71270f77

This issue was referenced by 1e71270f77a4e1c7c84b871e5378c659d61edb3e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1e71270f77.

Closed by commit 1e71270f77.
Bastien Montagne self-assigned this 2015-04-10 12:36:59 +02:00

This issue was referenced by 085fa2e3d7

This issue was referenced by 085fa2e3d7c002396c031fa907c7bd6e6f8b3541

Added subscriber: @enginpost

Added subscriber: @enginpost

System Information
Windows 10.0 Pro (Version 10.0.16299 Build 16299)
NVIDIA GRX 1080 w/ 8GB GPU RAM
Intel i7-7600K@4GHz

Blender Version
2.79 (2017-09-11 10:43)

Short description of error
Nodes Animation project cause memory allocation to skyrocket
Blender Crashes when going into render

Exact steps for others to reproduce the error

  1. Load attached project (watch memory climb from 10MB to +15GB on full-screen 4k monitor)
  2. Press "Animation" button on Render tab soon after loading the project
  3. Sometimes a few PNGs will render, and then crashes with the error "EXCEPTION_ACCESS_VIOLATION" (and sometimes it crashes immediately)

Logs And Files
No crash text file generated.ep-video-intro.blend

CMD Window Text

Microsoft Windows [Version 10.0.16299.19]
(c) 2017 Microsoft Corporation. All rights reserved.

C:\Users\steve>cd C:\Program Files\Blender Foundation\Blender

C:\Program Files\Blender Foundation\Blender>blender.exe -d
Switching to fully guarded memory allocator.
Blender 2.79 (sub 0)
Build: Mon 09/11/2017 07:44 AM Windows
argv- [x] = blender.exe
argv- [x] = -d
read file C:\Users\steve\AppData\Roaming\Blender Foundation\Blender\2.79\config\userpref.blend
Version 279 sub 0 date 2017-09-11 10:43 hash 5bd8ac9
Read prefs: C:\Users\steve\AppData\Roaming\Blender Foundation\Blender\2.79\config\userpref.blend
read file
Version 272 sub 2 date unknown hash unknown

ordered
OBCube
OBLamp
OBCamera
found bundled python: C:\Program Files\Blender Foundation\Blender\2.79\python
Registered Animation Nodes with 497 modules.
Read blend: D:_blender_projects\enginpost-intro\ep-video-intro.blend
read file D:_blender_projects\enginpost-intro\ep-video-intro.blend
Version 279 sub 0 date 2017-09-11 10:43 hash 5bd8ac9

ordered
OBAnimation Nodes Object Container
OBTube Path
OBTube.008
OBTube.007
OBTube.006
OBTube.005
OBTube.004
OBTube.003
OBTube.002
OBTube.001
OBLight-Floor-highlight skrim
OBLight-Floor-highlight
OBLight-Fill
OBLight-Back
OBLight-Key
OBText
OBfloor
OBTube
OBCamera
eval fcurve 'location' - 173.000000 => 1/2, 0
eval fcurve 'location' - 173.000000 => 1/2, 0
eval fcurve 'location' - 173.000000 => 1/2, 0
Evaluate all animation - 43.000000

ordered
OBAnimation Nodes Object Container
OBTube Path
OBTube.008
OBTube.007
OBTube.006
OBTube.005
OBTube.004
OBTube.003
OBTube.002
OBTube.001
OBLight-Floor-highlight skrim
OBLight-Floor-highlight
OBLight-Fill
OBLight-Back
OBLight-Key
OBText
OBfloor
OBTube
OBCamera
Evaluate all animation - 42.750000
Error: EXCEPTION_ACCESS_VIOLATION

C:\Program Files\Blender Foundation\Blender>

**System Information** Windows 10.0 Pro (Version 10.0.16299 Build 16299) NVIDIA GRX 1080 w/ 8GB GPU RAM Intel i7-7600K@4GHz **Blender Version** 2.79 (2017-09-11 10:43) **Short description of error** Nodes Animation project cause memory allocation to skyrocket Blender Crashes when going into render **Exact steps for others to reproduce the error** 1. Load attached project (watch memory climb from 10MB to +15GB on full-screen 4k monitor) 2. Press "Animation" button on Render tab soon after loading the project 3. Sometimes a few PNGs will render, and then crashes with the error *"EXCEPTION_ACCESS_VIOLATION"* (and sometimes it crashes immediately) **Logs And Files** *No crash text file generated.*[ep-video-intro.blend](https://archive.blender.org/developer/F1128841/ep-video-intro.blend) **CMD Window Text** > Microsoft Windows [Version 10.0.16299.19] > (c) 2017 Microsoft Corporation. All rights reserved. > > C:\Users\steve>cd C:\Program Files\Blender Foundation\Blender > > C:\Program Files\Blender Foundation\Blender>blender.exe -d > Switching to fully guarded memory allocator. > Blender 2.79 (sub 0) > Build: Mon 09/11/2017 07:44 AM Windows > argv- [x] = blender.exe > argv- [x] = -d > read file C:\Users\steve\AppData\Roaming\Blender Foundation\Blender\2.79\config\userpref.blend > Version 279 sub 0 date 2017-09-11 10:43 hash 5bd8ac9 > Read prefs: C:\Users\steve\AppData\Roaming\Blender Foundation\Blender\2.79\config\userpref.blend > read file > Version 272 sub 2 date unknown hash unknown > > ordered > OBCube > OBLamp > OBCamera > found bundled python: C:\Program Files\Blender Foundation\Blender\2.79\python > Registered Animation Nodes with 497 modules. > Read blend: D:\_blender_projects\enginpost-intro\ep-video-intro.blend > read file D:\_blender_projects\enginpost-intro\ep-video-intro.blend > Version 279 sub 0 date 2017-09-11 10:43 hash 5bd8ac9 > > ordered > OBAnimation Nodes Object Container > OBTube Path > OBTube.008 > OBTube.007 > OBTube.006 > OBTube.005 > OBTube.004 > OBTube.003 > OBTube.002 > OBTube.001 > OBLight-Floor-highlight skrim > OBLight-Floor-highlight > OBLight-Fill > OBLight-Back > OBLight-Key > OBText > OBfloor > OBTube > OBCamera > eval fcurve 'location' - 173.000000 => 1/2, 0 > eval fcurve 'location' - 173.000000 => 1/2, 0 > eval fcurve 'location' - 173.000000 => 1/2, 0 > Evaluate all animation - 43.000000 > > ordered > OBAnimation Nodes Object Container > OBTube Path > OBTube.008 > OBTube.007 > OBTube.006 > OBTube.005 > OBTube.004 > OBTube.003 > OBTube.002 > OBTube.001 > OBLight-Floor-highlight skrim > OBLight-Floor-highlight > OBLight-Fill > OBLight-Back > OBLight-Key > OBText > OBfloor > OBTube > OBCamera > Evaluate all animation - 42.750000 > Error: EXCEPTION_ACCESS_VIOLATION > > C:\Program Files\Blender Foundation\Blender>
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Member

Please start a new ticket, not dig up an unrelated 2+ year old one please.

Please start a new ticket, not dig up an unrelated 2+ year old one please.

@LazyDodo I am completely new to logging tickets. I copied the above style. Could you recommend which thread to post the ticket into? Would you recommend the "Nodes" project?

@LazyDodo I am completely new to logging tickets. I copied the above style. Could you recommend which thread to post the ticket into? Would you recommend the "Nodes" project?
Member

Click the big blue 'report bug' on https://developer.blender.org/ and fill out the form.

Click the big blue 'report bug' on https://developer.blender.org/ and fill out the form.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44329
No description provided.